--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Psychological fiction'
 - !lcsh 'Rape victims -- Fiction'
 - !lcsh 'Epistolary fiction'
+- GITenberg
 title: 'Clarissa: Preface, Hints of Prefaces, and Postscript'
 url: http://www.gutenberg.org/ebooks/29964
